unpackaged/main/default/objects/Custom_Report__c/Custom_Report__c.object-meta.xml
<CustomObject>
    <label>Custom Report</label>
    <nameField>
        <displayFormat>CRT-{0000000}</displayFormat>
        <label>Custom Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>