unpackaged/main/default/objects/Custom_Report__c/fields/Adam_Q_Date__c.field-meta.xml
<CustomField>
    <fullName>Adam_Q_Date__c</fullName>
    <label>Adam Q Date</label>
    <type>Date</type>
</CustomField>