unpackaged/main/default/objects/Custom_Report__c/fields/Adam_Q_Result__c.field-meta.xml
<CustomField>
    <fullName>Adam_Q_Result__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adam Q Result</label>
    <type>Checkbox</type>
</CustomField>