unpackaged/main/default/objects/Custom_Report__c/fields/Adam_Q_Score__c.field-meta.xml
<CustomField>
    <fullName>Adam_Q_Score__c</fullName>
    <label>Adam Q Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>