unpackaged/main/default/objects/Custom_Report__c/fields/BMI__c.field-meta.xml
<CustomField>
    <fullName>BMI__c</fullName>
    <label>BMI</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>