unpackaged/main/default/objects/Custom_Report__c/fields/Calls_Within_15_Days__c.field-meta.xml
<CustomField>
    <fullName>Calls_Within_15_Days__c</fullName>
    <label>Calls Within 15 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>