unpackaged/main/default/objects/Custom_Report__c/fields/Custom_Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Custom_Report_Type__c</fullName>
    <label>Custom Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Calls Sales Correlation</fullName>
            </value>
            <value>
                <fullName>Treatment Outcome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>