unpackaged/main/default/objects/Custom_Report__c/fields/Date_Last_Call_Prior_to_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Call_Prior_to_Purchase__c</fullName>
    <label>Date Last Call Prior to Purchase</label>
    <type>Date</type>
</CustomField>