unpackaged/main/default/objects/Custom_Report__c/fields/Days_Between_Last_Task_and_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Last_Task_and_Purchase__c</fullName>
    <formula>IF(Purchase_Date__c - Date_Last_Call_Prior_to_Purchase__c&gt;=1,Purchase_Date__c - Date_Last_Call_Prior_to_Purchase__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Between Last Task and Purchase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>