unpackaged/main/default/objects/Custom_Report__c/fields/First_Blood_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Blood_Test_Date__c</fullName>
    <label>First Blood Test Date</label>
    <type>Date</type>
</CustomField>