unpackaged/main/default/objects/Custom_Report__c/fields/First_Blood_Test_FT__c.field-meta.xml
<CustomField>
    <fullName>First_Blood_Test_FT__c</fullName>
    <label>First Blood Test FT</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>