unpackaged/main/default/objects/Custom_Report__c/fields/First_Blood_Test_TT__c.field-meta.xml
<CustomField>
    <fullName>First_Blood_Test_TT__c</fullName>
    <label>First Blood Test TT</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>