unpackaged/main/default/objects/Custom_Report__c/fields/Initial_Consultation_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Initial_Consultation_Symptoms__c</fullName>
    <label>Initial Consultation Symptoms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>