unpackaged/main/default/objects/Custom_Report__c/fields/Last_Blood_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Blood_Test_Date__c</fullName>
    <label>Last Blood Test Date</label>
    <type>Date</type>
</CustomField>