unpackaged/main/default/objects/Custom_Report__c/fields/Last_Blood_Test_FT__c.field-meta.xml
<CustomField>
    <fullName>Last_Blood_Test_FT__c</fullName>
    <label>Last Blood Test FT</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>