unpackaged/main/default/objects/Custom_Report__c/fields/Last_Blood_Test_TT__c.field-meta.xml
<CustomField>
    <fullName>Last_Blood_Test_TT__c</fullName>
    <label>Last Blood Test TT</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>