unpackaged/main/default/objects/Custom_Report__c/fields/Last_Follow_Up_Consultation_Note__c.field-meta.xml
<CustomField>
    <fullName>Last_Follow_Up_Consultation_Note__c</fullName>
    <label>Last Follow Up Consultation Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>