unpackaged/main/default/objects/Custom_Report__c/fields/Last_Follow_Up_Consultation_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Last_Follow_Up_Consultation_Satisfaction__c</fullName>
    <label>Last Follow Up Consultation Satisfaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>