unpackaged/main/default/objects/Custom_Report__c/fields/Last_Patient_Note__c.field-meta.xml
<CustomField>
    <fullName>Last_Patient_Note__c</fullName>
    <label>Last Patient Note</label>
    <type>TextArea</type>
</CustomField>