unpackaged/main/default/objects/Custom_Report__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Custom Reports</relationshipLabel>
    <relationshipName>Custom_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>