unpackaged/main/default/objects/Custom_Report__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Custom Reports</relationshipLabel>
    <relationshipName>Custom_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>