unpackaged/main/default/objects/Custom_Report__c/fields/Patient_Status__c.field-meta.xml
<CustomField>
    <fullName>Patient_Status__c</fullName>
    <label>Patient Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>