unpackaged/main/default/objects/Custom_Report__c/fields/Purchase_Type__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Type__c</fullName>
    <label>Purchase Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>