unpackaged/main/default/objects/Custom_Report__c/fields/QAdam_First_Date__c.field-meta.xml
<CustomField>
    <fullName>QAdam_First_Date__c</fullName>
    <label>QAdam First Date</label>
    <type>Date</type>
</CustomField>