unpackaged/main/default/objects/Custom_Report__c/fields/QAdam_Last_Date__c.field-meta.xml
<CustomField>
    <fullName>QAdam_Last_Date__c</fullName>
    <label>QAdam Last Date</label>
    <type>Date</type>
</CustomField>