unpackaged/main/default/objects/Custom_Report__c/fields/QAdam_Last_Score__c.field-meta.xml
<CustomField>
    <fullName>QAdam_Last_Score__c</fullName>
    <label>QAdam Last Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>