unpackaged/main/default/objects/Custom_Report__c/recordTypes/Calls_Sales_Correlation.recordType-meta.xml
<RecordType>
    <fullName>Calls_Sales_Correlation</fullName>
    <active>true</active>
    <label>Calls Sales Correlation</label>
</RecordType>