unpackaged/main/default/objects/Custom_Report__c/recordTypes/Treatment_Outcome.recordType-meta.xml
<RecordType>
    <fullName>Treatment_Outcome</fullName>
    <active>true</active>
    <label>Treatment Outcome</label>
</RecordType>